# anime-cards

./: .env.example  anime.db  main.py  naruto.json  pyproject.toml  settings.py
app/: db.py  main.py  utils.py
app/facade/: users.py
app/models/: characters.py  users.py
app/repository/: users.py
app/routes/: characters.py  users.py
app/schemas/: characters.py  users.py
app/scripts/: load_characters.py
